# confidential_multi_vote_system

./: .gitignore  Cargo.toml  README.md  certificate.json  client_config.json  existing_votes.json  pem_config.json  voting_server_config.json
lib/: Cargo.toml
lib/src/: data.rs  lib.rs
lib/src/configs/: certificate.rs  client.rs  existing_votes.rs  mod.rs  pem.rs
lib/src/crypto_schemes/: bigint.rs  el_gamal.rs  error.rs  paillier.rs
lib/src/utils/: base_three.rs
src/: certificate.rs  client_app.rs  configs.rs  crypto_schemes.rs  data.rs  generate_configs.rs  generate_votes.rs  key_share_holders.rs  main.rs  pem.rs  pem_server.rs  server.rs  tpm_fake.rs  utils.rs  voting_server.rs
src/configs/: certificate.rs  client.rs  existing_votes.rs  pem.rs  voting_server.rs
src/crypto_schemes/: bigint.rs  el_gamal.rs  error.rs  paillier.rs
src/utils/: base_three.rs  candidate.rs
