[package]
name = "shareholder_crypto"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex-literal = "0.4.1"
num-bigint = { version = "0.4.5", features = ["serde"] }
num-prime = "0.4.3"
rand = "0.8.5"
serde_json = "1.0.117"
sha256 = "1.5.0"
serde = { version = "1.0.202", features = ["derive"] }
tokio-tungstenite = "*"
ws = "0.9.2"
futures-channel = "0.3.30"
futures-util = "0.3.30"
tokio = { version = "1.37.0", features = ["rt", "rt-multi-thread", "macros"] }
env_logger = "0.11.3"
log = "0.4.21"
url = "2.5.0"
rsa = { version = "0.9.6", features = ["serde"] }

[[bin]]
name = "client"
path = "src/main.rs"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "tpm_fake"
path = "src/tpm_fake.rs"

[[bin]]
name = "generate_configs"
path = "src/generate_configs.rs"
