[package]
name = "shareholder_crypto"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex-literal = "0.4.1"
num-bigint = { version = "0.4.5", features = ["serde"] }
num-prime = "0.4.3"
rand = "0.8.5"
serde_json = "1.0.117"
sha256 = "1.5.0"
serde = { version = "1.0.202", features = ["derive"] }
tokio-tungstenite = "*"
ws = "0.9.2"
futures-channel = "0.3.30"
futures-util = "0.3.30"
tokio = { version = "1.37.0", features = ["rt", "rt-multi-thread", "macros", "io-std"] }
env_logger = "0.11.3"
log = "0.4.21"
url = "2.5.0"
rsa = { version = "0.9.6", features = ["serde", "sha2"] }
aes-gcm = "0.10.3"

[[bin]]
name = "client_app"
path = "src/client_app.rs"

[[bin]]
name = "voting_server"
path = "src/voting_server.rs"

[[bin]]
name = "pem_server"
path = "src/pem_server.rs"

[[bin]]
name = "generate_configs"
path = "src/generate_configs.rs"

[[bin]]
name = "key_share_holders"
path = "src/key_share_holders.rs"

[[bin]]
name = "generate_votes"
path = "src/generate_votes.rs"
